tests/fixtures/invalid/pow_none_bytes.py
# Cannot call pow() with None, Bytes
x = pow(None, b"hello")
